--- a/app/globals.css
+++ b/app/globals.css
@@ -2,16 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-  --dark-slate:  #1E293B;
+@layer base {
+  :root {
+    --background: 23 23 23;
+    --foreground: #ffffff;
+    --primary: 30 64 175;
+    --lighter: 96 165 250;
+    --secondary:  30 41 59;
+    --primary-text: #d4d4d4;
+    --secondary-text: #94a3b8;
+  }
 }
+
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: 23 23 23;
+    --foreground: #ffffff;
   }
 }
 
@@ -19,4 +26,44 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+input:-internal-autofill-selected {
+  background-color: initial;
+}
+
+.button-container {
+  position: relative;
+  padding: 0.1rem;
+  border: 4px solid transparent;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+.button-container::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500%;
+  height: 500%;
+  translate: -50% -50%;
+  background-image: conic-gradient(#ffffff66, transparent, #ffffff66, transparent, #ffffff66);
+  z-index: -1;
+  animation: spin 3s infinite linear;
+}
+@keyframes spin {
+  to {rotate: 360deg;}
+}
+
+@keyframes color-pulse {
+  from {color: rgb(var(--lighter));}
+  to {color: rgb(var(--primary));}
+}
+
+.spinner {
+  animation-name: spin, color-pulse;
+  animation-duration: 3s, 1s;
+  animation-timing-function: linear, ease-in-out;
+  animation-iteration-count: infinite, infinite;
+  animation-direction: normal, alternate;
 }
